--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220701161044">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220702233411">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -72,7 +72,7 @@
 
 			</section>
 
-			<div class="__container">
+			<div class="-margin __container">
 
 				<!-- !section about -->
 				<section class="about" id="about">
@@ -80,6 +80,30 @@
 						<div class="page-title__on-back">about</div>
 						<div class="page-title__on-forward ">The Basics Of Healthy Food</div>
 					</h2>
+					<div class="about__content">
+						<div class="about__text">In aliqua ea ullamco ad est ex non deserunt nulla. Consectetur sint ea aliquip aliquip consectetur voluptate est. Eu minim dolore laboris enim mollit voluptate irure esse aliquip.</div>
+						<div class="about__box-slider">
+							<div class="_icon-arrow_left"></div>
+							<div class="about__slider">
+								<div class="about__swiper">
+									<div data-gallery class="about__slide -ibg">
+										<picture><source srcset="img/About/1.webp" type="image/webp"><img src="img/About/1.jpg" alt="pic1"></picture>
+									</div>
+									<div data-gallery class="about__slide -ibg">
+										<picture><source srcset="img/About/2.webp" type="image/webp"><img src="img/About/2.jpg" alt="pic1"></picture>
+									</div>
+									<div data-gallery class="about__slide -ibg">
+										<picture><source srcset="img/About/3.webp" type="image/webp"><img src="img/About/3.jpg" alt="pic1"></picture>
+									</div>
+								</div>
+							</div>
+							<div class="_icon-arrow_right"></div>
+
+						</div>
+
+
+					</div>
+
 				</section>
 				<!-- !section work -->
 				<section class="work" id="work">
@@ -87,13 +111,215 @@
 						<div class="page-title__on-back">work</div>
 						<div class="page-title__on-forward ">how it works</div>
 					</h2>
+					<div class="work__content">
+						<div class="work-item">
+							<h3 class="work-item__title">Pick meals</h3>
+							<div class="work-item__text">Choose your meals from our diverse weekly menu. Find gluten or dairy free, low carb & veggie options.</div>
+						</div>
+						<div class="work-item">
+							<h3 class="work-item__title">Choose how often</h3>
+							<div class="work-item__text">Our team of chefs do the prep work - no more chopping, measuring, or sink full of dishes!</div>
+						</div>
+						<div class="work-item">
+							<h3 class="work-item__title">fast deliveries</h3>
+							<div class="work-item__text">Your freshly prepped 15-min dinner kits arrive on your doorstep in a refrigerated box.</div>
+						</div>
+						<div class="work-item">
+							<h3 class="work-item__title">tasty meals</h3>
+							<div class="work-item__text">Gobble makes cooking fast, so you have more time to unwind and be with family.</div>
+						</div>
+					</div>
 				</section>
 				<!-- !section dishes -->
 				<section class="dishes" id="dishes">
 					<h2 class="page-title _anim-items">
 						<div class="page-title__on-back">dishes</div>
-						<div class="page-title__on-forward ">Dish Of The Day</div>
+						<div class="page-title__on-forward">Dish Of The Day</div>
 					</h2>
+					<div class="dishes__content">
+						<div class="dishes__item item-dishes">
+							<div class="item-dishes__img -ibg">
+								<picture><source srcset="img/Dieshes/1.webp" type="image/webp"><img src="img/Dieshes/1.jpg" alt=""></picture>
+								<a class="item-dishes__flip-link _icon-arrow_flip" href="#"></a>
+							</div>
+							<div class="item-dishes__body">
+								<h3 class="item-dishes__title">Featured Meal
+									<div class="item-dishes__subtitle">Served with french fries + drink</div>
+								</h3>
+								<div class="item-dishes__discription">Choice of: Coke, Fanta, Sprite, Upgrade to large fries, Add whopper patty, Add Tender crisp patty and more...</div>
+								<div class="item-dishes__rating">
+									<div class="rating rating_set">
+										<div class="rating__body">
+											<div class="rating__active"></div>
+											<fieldset class="rating__items">
+												<div class="rating__group">
+													<input type="radio" class="rating__item" value="1" aria-label="one star" name="rating1" checked>
+													<input type="radio" class="rating__item" value="2" aria-label="one star" name="rating1">
+													<input type="radio" class="rating__item" value="3" aria-label="one star" name="rating1">
+													<input type="radio" class="rating__item" value="4" aria-label="one star" name="rating1">
+													<input type="radio" class="rating__item" value="5" arial-label="one star" name="rating1">
+												</div>
+											</fieldset>
+										</div>
+										<div class="rating__value">0</div>
+									</div>
+									<button type="submit" class="item-dishes__button button">order</button>
+								</div>
+							</div>
+						</div>
+						<div class="dishes__item item-dishes">
+							<div class="item-dishes__img -ibg">
+								<picture><source srcset="img/Dieshes/2.webp" type="image/webp"><img src="img/Dieshes/2.jpg" alt=""></picture>
+								<a class="item-dishes__flip-link _icon-arrow_flip" href="#"></a>
+							</div>
+							<div class="item-dishes__body">
+								<h3 class="item-dishes__title">Featured Meal
+									<div class="item-dishes__subtitle">Served with french fries + drink</div>
+								</h3>
+								<div class="item-dishes__discription">Choice of: Coke, Fanta, Sprite, Upgrade to large fries, Add whopper patty, Add Tender crisp patty and more...</div>
+								<div class="item-dishes__rating">
+									<div class="rating rating_set">
+										<div class="rating__body">
+											<div class="rating__active"></div>
+											<fieldset class="rating__items">
+
+												<div class="rating__group">
+													<input type="radio" class="rating__item" value="1" aria-label="one star" name="rating2">
+													<input type="radio" class="rating__item" value="2" aria-label="one star" name="rating2" checked>
+													<input type="radio" class="rating__item" value="3" aria-label="one star" name="rating2">
+													<input type="radio" class="rating__item" value="4" aria-label="one star" name="rating2">
+													<input type="radio" class="rating__item" value="5" arial-label="one star" name="rating2">
+												</div>
+											</fieldset>
+										</div>
+										<div class="rating__value">3.6</div>
+									</div>
+									<button type="submit" class="item-dishes__button button">order</button>
+								</div>
+							</div>
+						</div>
+						<div class="dishes__item item-dishes">
+							<div class="item-dishes__img -ibg">
+								<picture><source srcset="img/Dieshes/3.webp" type="image/webp"><img src="img/Dieshes/3.jpg" alt=""></picture>
+								<a class="item-dishes__flip-link _icon-arrow_flip" href="#"></a>
+							</div>
+							<div class="item-dishes__body">
+								<h3 class="item-dishes__title">Featured Meal
+									<div class="item-dishes__subtitle">Served with french fries + drink</div>
+								</h3>
+								<div class="item-dishes__discription">Choice of: Coke, Fanta, Sprite, Upgrade to large fries, Add whopper patty, Add Tender crisp patty and more...</div>
+								<div class="item-dishes__rating">
+									<div class="rating rating_set">
+										<div class="rating__body">
+											<div class="rating__active"></div>
+											<fieldset class="rating__items">
+
+												<div class="rating__group">
+													<input type="radio" class="rating__item" value="1" aria-label="one star" name="rating1">
+													<input type="radio" class="rating__item" value="2" aria-label="one star" name="rating1">
+													<input type="radio" class="rating__item" value="3" aria-label="one star" name="rating1" checked>
+													<input type="radio" class="rating__item" value="4" aria-label="one star" name="rating1">
+													<input type="radio" class="rating__item" value="5" arial-label="one star" name="rating1">
+												</div>
+											</fieldset>
+										</div>
+										<div class="rating__value">3.6</div>
+									</div>
+									<button type="submit" class="item-dishes__button button">order</button>
+								</div>
+							</div>
+						</div>
+						<div class="dishes__item item-dishes">
+							<div class="item-dishes__img -ibg">
+								<picture><source srcset="img/Dieshes/4.webp" type="image/webp"><img src="img/Dieshes/4.jpg" alt=""></picture>
+								<a class="item-dishes__flip-link _icon-arrow_flip" href="#"></a>
+							</div>
+							<div class="item-dishes__body">
+								<h3 class="item-dishes__title">Featured Meal
+									<div class="item-dishes__subtitle">Served with french fries + drink</div>
+								</h3>
+								<div class="item-dishes__discription">Choice of: Coke, Fanta, Sprite, Upgrade to large fries, Add whopper patty, Add Tender crisp patty and more...</div>
+								<div class="item-dishes__rating">
+									<div class="rating rating_set">
+										<div class="rating__body">
+											<fieldset class="rating__items">
+
+												<div class="rating__group">
+													<input type="radio" class="rating__item" value="1" aria-label="one star" name="rating4">
+													<input type="radio" class="rating__item" value="2" aria-label="one star" name="rating4">
+													<input type="radio" class="rating__item" value="3" aria-label="one star" name="rating4">
+													<input type="radio" class="rating__item" value="4" aria-label="one star" name="rating4" checked>
+													<input type="radio" class="rating__item" value="5" arial-label="one star" name="rating4">
+												</div>
+											</fieldset>
+										</div>
+										<div class="rating__value">3.6</div>
+									</div>
+									<button type="submit" class="item-dishes__button button">order</button>
+								</div>
+							</div>
+						</div>
+						<div class="dishes__item item-dishes">
+							<div class="item-dishes__img -ibg">
+								<picture><source srcset="img/Dieshes/5.webp" type="image/webp"><img src="img/Dieshes/5.jpg" alt=""></picture>
+								<a class="item-dishes__flip-link _icon-arrow_flip" href="#"></a>
+							</div>
+							<div class="item-dishes__body">
+								<h3 class="item-dishes__title">Featured Meal
+									<div class="item-dishes__subtitle">Served with french fries + drink</div>
+								</h3>
+								<div class="item-dishes__discription">Choice of: Coke, Fanta, Sprite, Upgrade to large fries, Add whopper patty, Add Tender crisp patty and more...</div>
+								<div class="item-dishes__rating">
+									<div class="rating rating_set">
+										<div class="rating__body">
+											<fieldset class="rating__items">
+
+												<div class="rating__group">
+													<input type="radio" class="rating__item" value="1" aria-label="one star" name="rating5">
+													<input type="radio" class="rating__item" value="2" aria-label="one star" name="rating5">
+													<input type="radio" class="rating__item" value="3" aria-label="one star" name="rating5">
+													<input type="radio" class="rating__item" value="4" aria-label="one star" name="rating5">
+													<input type="radio" class="rating__item" value="5" arial-label="one star" name="rating5" checked>
+												</div>
+											</fieldset>
+										</div>
+										<div class="rating__value">3.6</div>
+									</div>
+									<button type="submit" class="item-dishes__button button">order</button>
+								</div>
+							</div>
+						</div>
+						<div class="dishes__item item-dishes">
+							<div class="item-dishes__img -ibg">
+								<picture><source srcset="img/Dieshes/6.webp" type="image/webp"><img src="img/Dieshes/6.jpg" alt=""></picture>
+								<a class="item-dishes__flip-link _icon-arrow_flip" href="#"></a>
+							</div>
+							<div class="item-dishes__body">
+								<h3 class="item-dishes__title">Featured Meal
+									<div class="item-dishes__subtitle">Served with french fries + drink</div>
+								</h3>
+								<div class="item-dishes__discription">Choice of: Coke, Fanta, Sprite, Upgrade to large fries, Add whopper patty, Add Tender crisp patty and more...</div>
+								<div class="item-dishes__rating">
+									<div class="rating rating_set">
+										<div class="rating__body">
+											<fieldset class="rating__items">
+
+												<div class="rating__group">
+													<input type="radio" class="rating__item" value="1" aria-label="one star" name="rating6">
+													<input type="radio" class="rating__item" value="2" aria-label="one star" name="rating6">
+													<input type="radio" class="rating__item" value="3" aria-label="one star" name="rating6">
+													<input type="radio" class="rating__item" value="4" aria-label="one star" name="rating6">
+													<input type="radio" class="rating__item" value="5" arial-label="one star" name="rating6">
+												</div>
+											</fieldset>
+										</div>
+										<div class="rating__value">3.6</div>
+									</div>
+									<button type="submit" class="item-dishes__button button">order</button>
+								</div>
+							</div>
+						</div>
+					</div>
 				</section>
 				<!-- !section chefs -->
 				<section class="chefs" id="chefs">
@@ -116,6 +342,7 @@
 						<div class="page-title__on-forward ">We in Social</div>
 					</h2>
 				</section>
+
 			</div>
 		</main>
 		<footer class="footer">
@@ -159,7 +386,7 @@
 		</div>
 
 	</div>
-	<script src="js/app.min.js?_v=20220701161044"></script>
+	<script src="js/app.min.js?_v=20220702233411"></script>
 </body>
 
 </html>
