--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20220702233411">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220705235052">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,7 +32,7 @@
 							<ul class="menu__list">
 								<li class="menu__item"><a href="#" class="menu__link">menu</a></li>
 								<li class="menu__item"><a href="#" class="menu__link">Recipes</a></li>
-								<li class="menu__item"><a href="#" class="menu__link">Chefs</a></li>
+								<li class="menu__item"><a href="#chefs" class="menu__link">Chefs</a></li>
 								<li class="menu__item"><a href="#" class="menu__link">Contacts</a></li>
 							</ul>
 						</nav>
@@ -98,12 +98,8 @@
 								</div>
 							</div>
 							<div class="_icon-arrow_right"></div>
-
 						</div>
-
-
 					</div>
-
 				</section>
 				<!-- !section work -->
 				<section class="work" id="work">
@@ -215,11 +211,11 @@
 											<fieldset class="rating__items">
 
 												<div class="rating__group">
-													<input type="radio" class="rating__item" value="1" aria-label="one star" name="rating1">
-													<input type="radio" class="rating__item" value="2" aria-label="one star" name="rating1">
-													<input type="radio" class="rating__item" value="3" aria-label="one star" name="rating1" checked>
-													<input type="radio" class="rating__item" value="4" aria-label="one star" name="rating1">
-													<input type="radio" class="rating__item" value="5" arial-label="one star" name="rating1">
+													<input type="radio" class="rating__item" value="1" aria-label="one star" name="rating3">
+													<input type="radio" class="rating__item" value="2" aria-label="one star" name="rating3">
+													<input type="radio" class="rating__item" value="3" aria-label="one star" name="rating3" checked>
+													<input type="radio" class="rating__item" value="4" aria-label="one star" name="rating3">
+													<input type="radio" class="rating__item" value="5" arial-label="one star" name="rating3">
 												</div>
 											</fieldset>
 										</div>
@@ -327,6 +323,89 @@
 						<div class="page-title__on-back">chefs</div>
 						<div class="page-title__on-forward ">This month's chefs</div>
 					</h2>
+					<div class="chefs-row">
+						<div class="chefs__item card-chef">
+							<div class="card-chef__info">
+								<div class="card-chef__photo -ibg"><picture><source srcset="img/Chefs/card1/Avatar1.webp" type="image/webp"><img src="img/Chefs/card1/Avatar1.jpg" alt="avatar1"></picture></div>
+								<div class="card-chef__name">Gregory Flores
+									<div class="card-chef__position">Chef of the cold</div>
+								</div>
+							</div>
+							<div class="card-chef__slider1">
+								<div class="card-chef__swiper">
+									<div class="card-chef__slide">
+										<div class="card-chef__box -ibg"><picture><source srcset="img/Chefs/card1/1.webp" type="image/webp"><img src="img/Chefs/card1/1.jpg" alt="pic1"></picture></div>
+									</div>
+									<div class="card-chef__slide">
+										<div class="card-chef__box -ibg"><picture><source srcset="img/Chefs/card1/2.webp" type="image/webp"><img src="img/Chefs/card1/2.jpg" alt="pic2"></picture></div>
+									</div>
+									<div class="card-chef__slide">
+										<div class="card-chef__box -ibg"><picture><source srcset="img/Chefs/card1/3.webp" type="image/webp"><img src="img/Chefs/card1/3.jpg" alt="pic3"></picture></div>
+									</div>
+									<div class="card-chef__slide">
+										<div class="card-chef__box -ibg"><picture><source srcset="img/Chefs/card1/2.webp" type="image/webp"><img src="img/Chefs/card1/2.jpg" alt="pic3"></picture></div>
+									</div>
+									<div class="card-chef__slide">
+										<div class="card-chef__box -ibg"><picture><source srcset="img/Chefs/card1/1.webp" type="image/webp"><img src="img/Chefs/card1/1.jpg" alt="pic3"></picture></div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="chefs__item card-chef">
+							<div class="card-chef__info">
+								<div class="card-chef__photo -ibg"><picture><source srcset="img/Chefs/card2/Avatar2.webp" type="image/webp"><img src="img/Chefs/card2/Avatar2.jpg" alt="avatar1"></picture></div>
+								<div class="card-chef__name">Annette Cooper
+									<div class="card-chef__position">Chef of the hot</div>
+								</div>
+							</div>
+							<div class="card-chef__slider2">
+								<div class="card-chef__swiper">
+									<div class="card-chef__slide">
+										<div class="card-chef__box -ibg"><picture><source srcset="img/Chefs/card2/1.webp" type="image/webp"><img src="img/Chefs/card2/1.jpg" alt="pic1"></picture></div>
+									</div>
+									<div class="card-chef__slide">
+										<div class="card-chef__box -ibg"><picture><source srcset="img/Chefs/card2/2.webp" type="image/webp"><img src="img/Chefs/card2/2.jpg" alt="pic2"></picture></div>
+									</div>
+									<div class="card-chef__slide">
+										<div class="card-chef__box -ibg"><picture><source srcset="img/Chefs/card2/3.webp" type="image/webp"><img src="img/Chefs/card2/3.jpg" alt="pic3"></picture></div>
+									</div>
+									<div class="card-chef__slide">
+										<div class="card-chef__box -ibg"><picture><source srcset="img/Chefs/card2/3.webp" type="image/webp"><img src="img/Chefs/card2/3.jpg" alt="pic3"></picture></div>
+									</div>
+									<div class="card-chef__slide">
+										<div class="card-chef__box -ibg"><picture><source srcset="img/Chefs/card2/3.webp" type="image/webp"><img src="img/Chefs/card2/3.jpg" alt="pic3"></picture></div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="chefs__item card-chef">
+							<div class="card-chef__info">
+								<div class="card-chef__photo -ibg"><picture><source srcset="img/Chefs/card3/Avatar3.webp" type="image/webp"><img src="img/Chefs/card3/Avatar3.jpg" alt="avatar3"></picture></div>
+								<div class="card-chef__name">Greg Fox
+									<div class="card-chef__position">Сhef macro kitchen</div>
+								</div>
+							</div>
+							<div class="card-chef__slider3">
+								<div class="card-chef__swiper">
+									<div class="card-chef__slide">
+										<div class="card-chef__box -ibg"><picture><source srcset="img/Chefs/card3/1.webp" type="image/webp"><img src="img/Chefs/card3/1.jpg" alt="pic1"></picture></div>
+									</div>
+									<div class="card-chef__slide">
+										<div class="card-chef__box -ibg"><picture><source srcset="img/Chefs/card3/2.webp" type="image/webp"><img src="img/Chefs/card3/2.jpg" alt="pic2"></picture></div>
+									</div>
+									<div class="card-chef__slide">
+										<div class="card-chef__box -ibg"><picture><source srcset="img/Chefs/card3/3.webp" type="image/webp"><img src="img/Chefs/card3/3.jpg" alt="pic3"></picture></div>
+									</div>
+									<div class="card-chef__slide">
+										<div class="card-chef__box -ibg"><picture><source srcset="img/Chefs/card3/2.webp" type="image/webp"><img src="img/Chefs/card3/2.jpg" alt="pic3"></picture></div>
+									</div>
+									<div class="card-chef__slide">
+										<div class="card-chef__box -ibg"><picture><source srcset="img/Chefs/card3/1.webp" type="image/webp"><img src="img/Chefs/card3/1.jpg" alt="pic3"></picture></div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 				</section>
 				<!-- !section reciepes -->
 				<section class="reciepes" id="reciepes">
@@ -334,14 +413,203 @@
 						<div class="page-title__on-back">Reciepes</div>
 						<div class="page-title__on-forward ">Recipes From Our Chefs</div>
 					</h2>
+					<div class="reciepes-sliders">
+
+						<div class="reciepes-sliders__item">
+							<div class="reciepes-bigslider__slider swiper-container swiper">
+								<div class="reciepes-bigslider__swiper swiper-wrapper">
+									<div class="reciepes-bigslider__slide swiper-slide">
+										<div class="slide-content -ibg">
+											<picture><source srcset="img/Recipes/3.webp" type="image/webp"><img src="img/Recipes/3.jpg" alt="pic1"></picture>
+											<a href="#" class="slide-content__link _icon-arrow_left"></a>
+											<div class="slide-content__title">breakfast</div>
+											<div class="slide-content__date">06 Jul 2021</div>
+											<div class="slide-content__text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+											<div class="slide-content__name">Jason Keller</div>
+											<div class="slide-content__icons">
+												<a href="#" class="_icon-eys">275</a><a href="#" class="_icon-message">12</a>
+											</div>
+										</div>
+									</div>
+									<div class="reciepes-bigslider__slide swiper-slide">
+										<div class="slide-content -ibg">
+											<picture><source srcset="img/Recipes/4.webp" type="image/webp"><img src="img/Recipes/4.jpg" alt="pic1"></picture>
+											<a href="#" class="slide-content__link _icon-arrow_left"></a>
+											<div class="slide-content__title">lunch</div>
+											<div class="slide-content__date">05 Aug 2021</div>
+											<div class="slide-content__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio consequatur ratione dignissimos.</div>
+											<div class="slide-content__name">Jason Keller</div>
+											<div class="slide-content__icons">
+												<a href="#" class="_icon-eys">275</a><a href="#" class="_icon-message">12</a>
+											</div>
+										</div>
+									</div>
+									<div class="reciepes-bigslider__slide swiper-slide">
+										<div class="slide-content -ibg">
+											<picture><source srcset="img/Recipes/1.webp" type="image/webp"><img src="img/Recipes/1.jpg" alt="pic1"></picture>
+											<a href="#" class="slide-content__link _icon-arrow_left"></a>
+											<div class="slide-content__title">dinner</div>
+											<div class="slide-content__date">15 Feb 2016</div>
+											<div class="slide-content__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia, libero!</div>
+											<div class="slide-content__name">Adam Smiths</div>
+											<div class="slide-content__icons">
+												<a href="#" class="_icon-eys">275</a><a href="#" class="_icon-message">12</a>
+											</div>
+										</div>
+									</div>
+									<div class="reciepes-bigslider__slide swiper-slide">
+										<div class="slide-content -ibg">
+											<picture><source srcset="img/Recipes/2.webp" type="image/webp"><img src="img/Recipes/2.jpg" alt="pic1"></picture>
+											<a href="#" class="slide-content__link _icon-arrow_left"></a>
+											<div class="slide-content__title">sweets</div>
+											<div class="slide-content__date">22 Nov 2022</div>
+											<div class="slide-content__text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+											<div class="slide-content__name">Julia Love</div>
+											<div class="slide-content__icons">
+												<a href="#" class="_icon-eys">275</a><a href="#" class="_icon-message">12</a>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="reciepes-sliders__item">
+							<div class="dots-reciept-slider swiper-container swiper">
+								<div class="dots-reciept-slider__swiper swiper-wrapper">
+									<div class="dots-reciept-slider__slide swiper-slide dots-reciept__content -ibg">
+
+										<picture><source srcset="img/Recipes/3.webp" type="image/webp"><img src="img/Recipes/3.jpg" alt="alt"></picture>
+										<div class="dots-reciept__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae, tenetur! Lorem ipsum dolor sit</div>
+										<div class="dots-reciept__items item-dot-receipt">
+											<div class="item-dot-receipt__info">
+												<div class="item-dot-receipt__title">Brackfast</div>
+												<div class="item-dot-receipt__date">07 Jan 2021</div>
+											</div>
+											<div class="item-dot-receipt__icons">
+												<a href="#" class="_icon-eys">275</a><a href="#" class="_icon-message">12</a>
+											</div>
+										</div>
+
+									</div>
+									<div class="dots-reciept-slider__slide swiper-slide">
+										<div class="dots-reciept__content -ibg">
+											<picture><source srcset="img/Recipes/4.webp" type="image/webp"><img src="img/Recipes/4.jpg" alt="alt"></picture>
+											<div class="dots-reciept__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+											<div class="dots-reciept__items item-dot-receipt">
+												<div class="item-dot-receipt__info">
+													<div class="item-dot-receipt__title">lunch</div>
+													<div class="item-dot-receipt__date">14 Aug 2022</div>
+												</div>
+												<div class="item-dot-receipt__icons">
+													<a href="#" class="_icon-eys">275</a><a href="#" class="_icon-message">12</a>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="dots-reciept-slider__slide swiper-slide">
+										<div class="dots-reciept__content -ibg">
+											<picture><source srcset="img/Recipes/1.webp" type="image/webp"><img src="img/Recipes/1.jpg" alt="Dinner"></picture>
+											<div class="dots-reciept__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. </div>
+											<div class="dots-reciept__items item-dot-receipt">
+												<div class="item-dot-receipt__info">
+													<div class="item-dot-receipt__title">Dinner</div>
+													<div class="item-dot-receipt__date">22 Nov 2022</div>
+												</div>
+												<div class="item-dot-receipt__icons">
+													<a href="#" class="_icon-eys">275</a><a href="#" class="_icon-message">12</a>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="dots-reciept-slider__slide swiper-slide">
+										<div class="dots-reciept__content -ibg">
+											<picture><source srcset="img/Recipes/2.webp" type="image/webp"><img src="img/Recipes/2.jpg" alt="alt"></picture>
+											<div class="dots-reciept__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis exercitationem amet porro quos laboriosam</div>
+											<div class="dots-reciept__items item-dot-receipt">
+												<div class="item-dot-receipt__info">
+													<div class="item-dot-receipt__title">sweets</div>
+													<div class="item-dot-receipt__date">02 Feb 2022</div>
+												</div>
+												<div class="item-dot-receipt__icons">
+													<a href="#" class="_icon-eys">275</a><a href="#" class="_icon-message">12</a>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 				</section>
-				<!-- !section reciepes -->
+				<!-- !section social -->
 				<section class="social" id="social">
 					<h2 class="page-title _anim-items">
 						<div class="page-title__on-back">social</div>
 						<div class="page-title__on-forward ">We in Social</div>
 					</h2>
+					<div class="social-row">
+						<div class="social-row__item">
+							<div class="social-item-content">
+								<div class="social-item-content__header social-item-header">
+									<a href="#" class="social-item-header__icon _icon-twitter">Twitter</a>
+									<button class="social-item-header__button button">Follow us</button>
+								</div>
+								<div class="social-item-content__body social-item-body">
+									<div class="social-item-body__date">22 Now at 16:20 pm</div>
+									<div class="social-item-body__text" data-simplebar>
+										Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut Lorem ipsum dolor sit amet, consectetur adipiscing Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum saepe doloribus, illo, nemo quaerat vel voluptas nam veniam quidem impedit repudiandae officia quisquam repellat consequuntur, incidunt iste veritatis commodi cumque.
+									</div>
+									<a href="#" class="social-item-body__name">@JuliaLove</a>
+
+								</div>
+							</div>
+						</div>
+						<div class="social-row__item">
+							<div class="social-item-content">
+								<div class="social-item-content__header social-item-header">
+									<a href="#" class="social-item-header__icon _icon-Instagram">Instagram</a>
+									<button class="social-item-header__button button">Follow us</button>
+								</div>
+								<div class="social-item-content__body social-item-body__gallery" data-simplebar>
+
+									<p class="-ibg"><picture><source srcset="img/Social/1.webp" type="image/webp"><img src="img/Social/1.jpg" alt="pic1"></picture></p>
+									<p class="-ibg"><picture><source srcset="img/Social/2.webp" type="image/webp"><img src="img/Social/2.jpg" alt="pic2"></picture></p>
+									<p class="-ibg"><picture><source srcset="img/Social/3.webp" type="image/webp"><img src="img/Social/3.jpg" alt="pic3"></picture></p>
+									<p class="-ibg"><picture><source srcset="img/Social/4.webp" type="image/webp"><img src="img/Social/4.jpg" alt="pic4"></picture></p>
+									<p class="-ibg"><picture><source srcset="img/Social/5.webp" type="image/webp"><img src="img/Social/5.jpg" alt="pic5"></picture></p>
+									<p class="-ibg"><picture><source srcset="img/Social/6.webp" type="image/webp"><img src="img/Social/6.jpg" alt="pic6"></picture></p>
+									<p class="-ibg"><picture><source srcset="img/Social/1.webp" type="image/webp"><img src="img/Social/1.jpg" alt="pic1"></picture></p>
+									<p class="-ibg"><picture><source srcset="img/Social/2.webp" type="image/webp"><img src="img/Social/2.jpg" alt="pic2"></picture></p>
+									<p class="-ibg"><picture><source srcset="img/Social/3.webp" type="image/webp"><img src="img/Social/3.jpg" alt="pic3"></picture></p>
+									<p class="-ibg"><picture><source srcset="img/Social/4.webp" type="image/webp"><img src="img/Social/4.jpg" alt="pic4"></picture></p>
+									<p class="-ibg"><picture><source srcset="img/Social/5.webp" type="image/webp"><img src="img/Social/5.jpg" alt="pic5"></picture></p>
+									<p class="-ibg"><picture><source srcset="img/Social/6.webp" type="image/webp"><img src="img/Social/6.jpg" alt="pic6"></picture></p>
+
+
+
+								</div>
+							</div>
+						</div>
+						<div class="social-row__item">
+							<div class="social-item-content">
+								<div class="social-item-content__header social-item-header">
+									<a href="#" class="social-item-header__icon _icon-twitter">Facebook</a>
+									<button class="social-item-header__button button">Follow us</button>
+								</div>
+								<div class="social-item-content__body social-item-body">
+									<div class="social-item-body__date">02 Feb at 11:40 pm</div>
+									<div class="social-item-body__text" data-simplebar>
+										Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, totam eos provident obcaecati necessitatibus commodi deleniti alias mollitia ipsum earum reiciendis, voluptatum consectetur. Eligendi quo provident aut eaque accusamus incidunt?
+									</div>
+									<a href="#" class="social-item-body__name">@JuliaLove</a>
+
+								</div>
+							</div>
+						</div>
+					</div>
 				</section>
+
 
 			</div>
 		</main>
@@ -386,7 +654,7 @@
 		</div>
 
 	</div>
-	<script src="js/app.min.js?_v=20220702233411"></script>
+	<script src="js/app.min.js?_v=20220705235052"></script>
 </body>
 
 </html>
